@@ -1,5 +1,13 @@
 2010-04-20 Emilio Meschi <emilio.meschi@cern.ch>
 
+	* tag V02-02-05
+	* catch exceptions in rcv of summarize loop per node and not globally
+	* minor fixes in web page
+	* put guard lock around edm::ep state queries (lock out delete)
+	* add "notstarted" EP state
+
+2010-04-20 Emilio Meschi <emilio.meschi@cern.ch>
+
 	* tag V02-02-04
 	* fix initialization of l1pre and pspre markers causing crashes
 	* when switching menus
